option('blas', type: 'string', value: 'blas',
        description: 'Choose BLAS library')
option('lapack', type: 'string', value: 'lapack',
        description: 'Choose LAPACK library')
option('lapacke', type: 'string', value: 'lapacke',
        description: 'Choose LAPACKE library')
option('dss', type: 'string', value: 'mkl-dynamic-lp64-seq',
        description: 'Choose flavor of MKL Direct Sparse Solver')
option('periodic', type : 'feature', value : 'disabled') # Since 0.47.0
